--- a/index.html
+++ b/index.html
@@ -14,10 +14,56 @@
       rel="stylesheet"
     />
 
+    <!-- BootStrap CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Campus Communities Website
+    <nav class="navbar navbar-expand-lg  fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img class="nlogo" src="./assets/Logo.png" alt=""
+        /></a>
+
+        <div class="rightside">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#">ACTIVITYES</a>
+              <a class="nav-link" href="#">CHAPTERS</a>
+              <a class="nav-link" href="#">ACTIVITIES</a>
+              <a class="nav-link" href="#">EVENTS</a>
+              <button class="joinus">JOIN US</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
