First Section view tags added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;200;300;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
     <!-- BootStrap CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -26,7 +25,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg  fixed-top">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img class="nlogo" src="./assets/Logo.png" alt=""
@@ -58,6 +57,45 @@
         </div>
       </div>
     </nav>
+
+    <div class="fsbgs">
+      <img src="./assets/TShape.png" class="topshape" alt="" />
+      <div class="first-section">
+        <div class="fs-contents">
+          <div class="fstexts">
+            <p class="fsheading">We love stories, let’s make together.</p>
+            <p class="fstagline">
+              We are a community of tinkerers, makers, policy geeks & students
+              and are working towards mapping and empowering people who share a
+              passion to innovate.
+            </p>
+            <!-- <button class="fsbtn">Join Discord</button> -->
+          </div>
+        </div>
+
+        <div class="fsboxes">
+          <div class="fsbox">
+            <p class="fsbheading">10000+</p>
+            <p class="fsbtagline">Community Members</p>
+          </div>
+          <div class="fsbox">
+            <p class="fsbheading">60+</p>
+            <p class="fsbtagline">Campus Chapters</p>
+          </div>
+          <div class="fsbox">
+            <p class="fsbheading">50+</p>
+            <p class="fsbtagline">Events Conducted</p>
+          </div>
+          <div class="fsbox">
+            <p class="fsbheading">50000+</p>
+            <p class="fsbtagline">Students Impacted</p>
+          </div>
+        </div>
+      </div>
+      <img src="./assets/BShape.png" class="bottomshape" alt="" />
+    </div>
+
+    <div class="second-section">Hi</div>
 
     <!-- JavaScript Bundle with Popper -->
     <script
