--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TinkerHub Campus Communities</title>
-
+    <link rel="shortcut icon" href="./assets/" type="image/x-icon" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
+      <div class="container-fluid navcontainer">
         <a class="navbar-brand" href="#"
           ><img class="nlogo" src="./assets/Logo.png" alt=""
         /></a>
@@ -43,13 +43,15 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div
+            class="collapse navbar-collapse rcollapse"
+            id="navbarNavAltMarkup"
+          >
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">HOME</a>
               <a class="nav-link" href="#">ABOUT</a>
               <a class="nav-link" href="#">ACTIVITYES</a>
               <a class="nav-link" href="#">CHAPTERS</a>
-              <a class="nav-link" href="#">ACTIVITIES</a>
               <a class="nav-link" href="#">EVENTS</a>
               <button class="joinus">JOIN US</button>
             </div>
