some changes , added hi

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         </div>
       </div>
       <img src="./assets/BShape.png" class="bottomshape" alt="" />
+      <div>
+        hello
+      </div>
     </div>
 
     <div class="second-section">Hi</div>
