--- a/index.html
+++ b/index.html
@@ -1,68 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TinkerHub Campus Communities</title>
-    <link rel="shortcut icon" href="./assets/" type="image/x-icon" />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;200;300;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- BootStrap CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid navcontainer">
-        <a class="navbar-brand" href="#"
-          ><img class="nlogo" src="./assets/Logo.png" alt=""
-        /></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TinkerHub Campus Communities</title>
+  <link rel="shortcut icon" href="./assets/" type="image/x-icon" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;200;300;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <!-- BootStrap CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
 
-        <div class="rightside">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse rcollapse"
-            id="navbarNavAltMarkup"
-          >
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
-              <a class="nav-link" href="#">ABOUT</a>
-              <a class="nav-link" href="#">ACTIVITYES</a>
-              <a class="nav-link" href="#">CHAPTERS</a>
-              <a class="nav-link" href="#">EVENTS</a>
-              <button class="joinus">JOIN US</button>
-            </div>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container navcontainer">
+      <a class="navbar-brand" href="#"><img class="nlogo" src="./assets/Logo.png" alt="" /></a>
+
+      <div class="rightside">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse rcollapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#">ACTIVITIES</a>
+            <a class="nav-link" href="#">CHAPTERS</a>
+            <a class="nav-link" href="#">EVENTS</a>
+            <button class="joinus">JOIN US</button>
           </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="fsbgs">
-      <img src="./assets/TShape.png" class="topshape" alt="" />
-      <div class="first-section">
+  <div class="fsbgs">
+    <img src="./assets/TShape.png" class="topshape" alt="" />
+    <div class="first-section">
+      <div class="container">
+
         <div class="fs-contents">
           <div class="fstexts">
             <p class="fsheading">We love stories, let’s make together.</p>
@@ -73,6 +60,7 @@
             </p>
             <!-- <button class="fsbtn">Join Discord</button> -->
           </div>
+
         </div>
 
         <div class="fsboxes">
@@ -94,19 +82,20 @@
           </div>
         </div>
       </div>
-      <img src="./assets/BShape.png" class="bottomshape" alt="" />
-      <div>
-        hello
-      </div>
+
     </div>
+    <img src="./assets/BShape.png" class="bottomshape" alt="" />
+    <div>
+      hello
+    </div>
+  </div>
 
-    <div class="second-section">Hi</div>
+  <div class="second-section">Hi</div>
 
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
