--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/dist/style.css" />
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg">
+  <!-- <nav class="navbar navbar-expand-lg">
     <div class="container navcontainer">
       <a class="navbar-brand" href="#"><img class="nlogo" src="./assets/Logo.png" alt="" /></a>
 
@@ -43,7 +43,38 @@
         </div>
       </div>
     </div>
+  </nav> -->
+
+  <!-- ---------nav-bar---------- -->
+  <nav class="navigation " id="navbar">
+    <div class="container navigation__content">
+      <div class="overlay hidden"></div>
+      <a href="index.html" class="navigation__logo">
+        <img src="./assets/Logo.png" alt="logo">
+      </a>
+      <ul class="navigation__list">
+        <li class="navigation__items"> <a href="#" class="navigation__link active">Home</a></li>
+        <li class="navigation__items">
+          <a href="" class="navigation__link ">About</a>
+        </li>
+        <li class="navigation__items"> <a href="" class="navigation__link"> Activities</a></li>
+        <li class="navigation__items"> <a href="" class="navigation__link">Chapter</a></li>
+        <li class="navigation__items"> <a href="" class="navigation__link">Events</a></li>
+        <li class="navigation__items mobile-btn"> <a href="" class="navigation__link ">Join Us</a></li>
+      </ul>
+      <a href="" class="joinus">Join Us <span></span></a>
+
+      <div class="navigation__menu ">
+        <ul class="open-btn">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
   </nav>
+  <!-- ---------nav-bar---------- -->
 
   <div class="fsbgs">
     <img src="./assets/TShape.png" class="topshape" alt="" />
@@ -85,9 +116,6 @@
 
     </div>
     <img src="./assets/BShape.png" class="bottomshape" alt="" />
-    <div>
-      hello
-    </div>
   </div>
 
   <div class="second-section">Hi</div>
@@ -96,6 +124,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+
+  <script src="assets/dist/main.js"></script>
 </body>
 
 </html>
