--- a/index.html
+++ b/index.html
@@ -95,21 +95,33 @@
         </div>
 
         <div class="fsboxes">
-          <div class="fsbox">
-            <p class="fsbheading">10000+</p>
-            <p class="fsbtagline">Community Members</p>
-          </div>
-          <div class="fsbox">
-            <p class="fsbheading">60+</p>
-            <p class="fsbtagline">Campus Chapters</p>
-          </div>
-          <div class="fsbox">
-            <p class="fsbheading">50+</p>
-            <p class="fsbtagline">Events Conducted</p>
-          </div>
-          <div class="fsbox">
-            <p class="fsbheading">50000+</p>
-            <p class="fsbtagline">Students Impacted</p>
+          <div class="row">
+
+            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+              <div class="fsbox">
+                <p class="fsbheading">10000+</p>
+                <p class="fsbtagline">Community Members</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+              <div class="fsbox">
+                <p class="fsbheading">60+</p>
+                <p class="fsbtagline">Campus Chapters</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+
+              <div class="fsbox">
+                <p class="fsbheading">50+</p>
+                <p class="fsbtagline">Events Conducted</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+              <div class="fsbox">
+                <p class="fsbheading">50000+</p>
+                <p class="fsbtagline">Students Impacted</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
