--- a/index.html
+++ b/index.html
@@ -130,7 +130,80 @@
     <img src="./assets/BShape.png" class="bottomshape" alt="" />
   </div>
 
-  <div class="second-section">Hi</div>
+  <!-- ----About---- -->
+  <section class="about section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-6 col-12 about__left-part">
+          <h2 class="heading__primary">What are TinkerHub Campus Communities?</h2>
+          <p class="paragraph paragraph--about">
+            Tinkerhub campus communities is a tinkerhub programme encouraging a tech
+            learning culture on campuses so that students can grow their abilities and further their careers.
+            Campus communities will help college students who don't think they're getting enough exposure to technology
+            or don't have the ideal environment to study it.
+
+          </p>
+
+
+        </div>
+        <div class="col-md-12 col-lg-6 col-12 about__right-part">
+          <img src="assets/img/about-home.png" alt="about-img" class="paralax-image">
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- --x--About--x-- -->
+  <!-- ----About---- -->
+  <section class="about section-padding" style="background: #F3FCF0;">
+    <div class="container">
+      <div class="row about__row--2">
+        <div class="col-md-12 col-lg-6 col-12 about__right-part">
+          <img src="assets/img/about-home.png" alt="about-img" class="paralax-image">
+        </div>
+        <div class="col-md-12 col-lg-6 col-12 about__left-part">
+          <h2 class="heading__primary">Why Tinkerhub Campus Communities?</h2>
+          <p class="paragraph paragraph--about">
+            The fourth industrial revolution is on its way, and talents will be everything. Tinkerhub is dedicated to
+            assisting our student community in upskilling and contributing to the community's progress through the
+            learning process. Tinkerhub's programmes are all oriented on peer-to-peer learning, and we're dedicated to
+            helping our members learn about new technologies, become industry-ready, and, most importantly, network and
+            make new contacts.
+
+          </p>
+
+        </div>
+
+      </div>
+
+
+    </div>
+  </section>
+  <!-- --x--About--x-- -->
+
+  <!-- ----About---- -->
+  <section class="about section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-6 col-12 about__left-part">
+          <h2 class="heading__primary">What are TinkerHub Campus Communities?</h2>
+          <p class="paragraph paragraph--about">
+            Tinkerhub campus communities is a tinkerhub programme encouraging a tech
+            learning culture on campuses so that students can grow their abilities and further their careers.
+            Campus communities will help college students who don't think they're getting enough exposure to technology
+            or don't have the ideal environment to study it.
+
+          </p>
+
+
+        </div>
+        <div class="col-md-12 col-lg-6 col-12 about__right-part">
+          <img src="assets/img/about-home.png" alt="about-img" class="paralax-image">
+        </div>
+      </div>
+
+    </div>
+  </section>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
