--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <!-- Custom CSS -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="assets/dist/style.css" />
 </head>
 
@@ -218,7 +220,7 @@
               <div class="projects__info">
                 <h3 class="projects__title">Be Curius Extended</h3>
                 <h4 class="projects__catogary">Workshop</h4>
-                <a href="#popup-1" class="projects__btn"><i class="fas fa-arrow-right"> </i></a>
+                <a href="#popup-1" class="projects__btn"><i class="bi bi-arrow-right"> </i></a>
               </div>
             </div>
 
@@ -236,7 +238,7 @@
               <div class="projects__info">
                 <h3 class="projects__title">Share the Vision</h3>
                 <h4 class="projects__catogary">Talk Session</h4>
-                <a href="#popup-1" class="projects__btn"><i class="fas fa-arrow-right"></i></a>
+                <a href="#popup-1" class="projects__btn"><i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
 
@@ -254,7 +256,7 @@
               <div class="projects__info">
                 <h3 class="projects__title">Be Curius</h3>
                 <h4 class="projects__catogary">Workshop</h4>
-                <a href="#popup-1" class="projects__btn"><i class="fas fa-arrow-right"></i></a>
+                <a href="#popup-1" class="projects__btn"><i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
 
@@ -264,8 +266,8 @@
           <div class="projects__outer">
             <div class="projects__single-item">
               <div class="projects__img-container"> -->
-                <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
-                <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
+        <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
+        <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
 
               </div>
               <div class="projects__info">
@@ -280,8 +282,8 @@
           <div class="projects__outer">
             <div class="projects__single-item">
               <div class="projects__img-container"> -->
-                <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
-                <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
+        <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
+        <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
 
               </div>
               <div class="projects__info">
@@ -296,8 +298,8 @@
           <div class="projects__outer">
             <div class="projects__single-item">
               <div class="projects__img-container"> -->
-                <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
-                <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
+        <!-- <img src="assets/img/houses/5.jpg" alt=""> -->
+        <!-- <div class="projects__img" style="background-image: url(assets/img/event-4.jpg)"></div>
 
               </div>
               <div class="projects__info">
@@ -641,14 +643,14 @@
 
       <div class="heading">
         <h2 class="heading__primary ">Frequently Asked <span> Questions </span></h2>
-
+    
       </div>
 
       <div class="accordion">
         <div class="accordion-item">
           <a class="accordion__link">How to start a TinkerHub Campus Community on your campus?</a>
           <div class="content">
-            <p class="paragraph"><strong> Step 2: </strong> You shouldn’t be alone on this mission! Find a team of
+            <p class="paragraph"> You shouldn’t be alone on this mission! Find a team of
               like-minded pals who
               are interested to
               create a community in your college.
@@ -681,7 +683,7 @@
             </div>
 
             <p class="paragraph">
-              <strong>Step 3:</strong>
+
 
               Create a virtual space for your community to meet. For a large community, meeting online is
               easier. And don’t use it just for meetings and discussions; you can also share learning resources,
@@ -694,7 +696,7 @@
 
             </p>
 
-            <p class="paragraph"> <strong> Step 4:</strong>
+            <p class="paragraph">
               All this hard work shouldn’t go unnoticed. Make sure that all the events of your community reach
               everyone in your campus.
             </p>
