--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <li class="navigation__items"> <a href="#events" class="navigation__link">Events</a></li>
         <li class="navigation__items"> <a href="#gallery" class="navigation__link">Gallery</a></li>
         <li class="navigation__items"> <a href="#colleges" class="navigation__link"> Colleges</a></li>
-        <li class="navigation__items mobile-btn"> <a href="" class="navigation__link ">Join Us</a></li>
+        <li class="navigation__items mobile-btn"> <a href="join.tinkerhub.org" class="navigation__link ">Join Us</a></li>
       </ul>
-      <a href="" class="joinus">Join Us <span></span></a>
+      <a href="join.tinkerhub.org" class="joinus">Join Us <span></span></a>
 
       <div class="navigation__menu ">
         <ul class="open-btn">
